--- a/app.json
+++ b/app.json
@@ -1,105 +1,104 @@
 {
-  "name": "gifted-md",
+  "name": "x-guru",
   "version": "5.0.0",
-  "description": "I am Gifted-Md, a Simple WhatsApp Bot built with NodeJs to Enhance WhatsApp Communication experience",
-  "website": "https://session.giftedtech.co.ke",
-  "dev_email": "mauricegift@gmail.com",
-  "logo": "https://files.catbox.moe/52699c.jpg",
-  "keywords": ["gifted-md"],
-  "repository": "https://github.com/mauricegift/gifted-md",
+  "description": "I am X GURU, a Simple WhatsApp Bot built with NodeJs to Enhance WhatsApp Communication experience",
+  "website": "https://xguru.onrender.com",
+  "dev_email": "gurutech@gmail.com",
+  "logo": "https://files.catbox.moe/7czrlj.jpg",
+  "keywords": ["x-guru", "whatsapp-bot"],
+  "repository": "https://github.com/ADDICT-HUB/XGURU-",
   "success_url": "/",
   "stack": "container",
   "env": {
     "SESSION_ID": {
-      "description": "Put your session-id here. Must Start with 'PRINCE-MDX~'",
+      "description": "Put your session-id here",
       "required": true,
       "value": ""
-    },  
+    },
     "MODE": {
-      "description": "Set Mode  to 'public' to work in all chats only, 'inbox' to work in pm(inbox) chats only or 'private' to work for you only. Default is 'public'. You can set up this later using .mode",
+      "description": "public / inbox / private",
       "required": false,
       "value": "public"
     },
     "OWNER_NAME": {
-      "description": "Put Owner Name Here",
+      "description": "Bot Owner Name",
       "required": true,
-      "value": "PRINCE"
+      "value": "GuruTech"
     },
     "OWNER_NUMBER": {
-      "description": "Put only one Owner Number Here ie 237xxxxx",
+      "description": "Bot Owner Number (without +)",
       "required": true,
-      "value": "237677224245"
-    },
-    "ANTI_DELETE": {
-      "description": "Can be set to 'inboxonly' to recover for personal chats only, 'chatsonly' to recover for groups and personal chats only or 'true' to recover all chats and status updates. Default is 'false'. You can set up this later using .antidelete",
-      "required": false,
-      "value": "inboxonly"
+      "value": "254704355518"
     },
     "SUDO_NUMBERS": {
-      "description": "Put Sudo Numbers separated by comma Here ie 2347xxxx,2357xxxxx,920xxxxx. Sudos have same rights as owner(can command the bot). if you don't want leave the space empty",
+      "description": "Additional admin numbers (comma separated)",
       "required": false,
       "value": ""
     },
-    "AUTO_READ_STATUS": {
-      "description": "Make it 'true' if you want bot to view statuses. You can set up this later using .autoview",
+    "BOT_NAME": {
+      "description": "Bot display name",
+      "required": false,
+      "value": "X GURU"
+    },
+    "PREFIX": {
+      "description": "Bot command prefix",
       "required": true,
+      "value": "."
+    },
+    "AUTO_READ_STATUS": {
+      "description": "Auto view WhatsApp statuses",
+      "required": false,
       "value": "true"
     },
     "AUTO_LIKE_STATUS": {
-      "description": "Make it 'true' if you want bot to read and like statuses. You can set up this later using .autolike",
+      "description": "Auto like WhatsApp statuses",
       "required": false,
       "value": "true"
     },
     "STATUS_LIKE_EMOJIS": {
-      "description": "Input your custom status like emoji(s) else leave to use default emojis. Only works if autolike status is 'true'",
+      "description": "Emojis for liking statuses",
       "required": false,
       "value": "💜,💛,❤️,🤍,💙"
     },
     "AUTO_REPLY_STATUS": {
-      "description": "Make it 'true' if you want the bot to send message after viewing status",
+      "description": "Auto reply after viewing status",
       "required": false,
       "value": "false"
     },
     "STATUS_REPLY_MSG": {
-      "description": "Set your status reply message to be sent after bot views status",
+      "description": "Reply message after viewing status",
       "required": false,
-      "value": "Status Viewed ✅️"
+      "value": "Status Viewed ✅"
     },
     "AUTO_READ_MESSAGES": {
-      "description": "Enter value to 'true' for blueticking all messages, or 'commands' for blueticking only commands else false. You can set up this later using .autoread",
+      "description": "true / commands / false",
       "required": false,
       "value": "false"
     },
     "PRESENCE": {
-      "description": "Put 'online' for always online, 'typing' for always typing a message, 'recording' for always recording audio or 'null' to maintain your presence. You can set up this later using .presence",
+      "description": "online / typing / recording / null",
       "required": true,
       "value": "online"
     },
-    
     "ANTILINK": {
-      "description": "Enter 'true' to delete links and kick the user automatically or 'delete' to delete the links without kicking the user or 'warn' to warn users 3 times before kicking them. You can set up this later using .antilink",
+      "description": "true / delete / warn",
       "required": false,
       "value": ""
     },
     "AUTO_BLOCK": {
-      "description": "Provide country codes you want the bot to automatically block",
+      "description": "Country codes to auto block",
       "required": false,
-      "value": "333,77,12"
+      "value": ""
     },
     "ANTICALL": {
-      "description": "Make it 'true' if you want to automatically reject calls or 'block' to decline calls and block caller. You can set up this later using .anticall",
+      "description": "true / block / false",
       "required": false,
       "value": "false"
     },
-    "BOT_NAME": {
-      "description": "You can edit this but maintain font style for uniformity. Use 'Fonts Type Keyboard' for styles.",
+    "NEWSLETTER_JID": {
+      "description": "WhatsApp Newsletter JID",
       "required": false,
-      "value": "𝐏𝐑𝐈𝐍𝐂𝐄 𝐌𝐃𝐗"
-    },
-    "PREFIX": {
-      "description": "Your Bot Prefix (default: .) You can put your own custom prefix",
-      "required": true,
-      "value": "."
+      "value": "120363421164015033@newsletter"
     }
   }
-  }
+}
